[project]
name = "somewhere"
version = "0.0.1"
description = "a goal tracking terminal app"
authors = [
    {name = "Ali",email = "125828096+hs7t@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "textual (>=4.0.0,<5.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
