[project]
name = "somewhere"
version = "0.0.1"
description = "A terminal program for tracking streaks"
authors = [
    {name = "Ali",email = "125828096+hs7t@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "rich (>=14.1.0,<15.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "tzdata (>=2025.2,<2026.0)"
]

[tool.poetry]
package-mode = false